Fri Nov  7 11:23:22 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Any_Unknown_IDL_Type.cpp:

	  The constructor tried to duplicate the message block
	  irresepctive of where it came from. To make the long story
	  short, it is quite possible that the message block that this
	  class gets could be from the stack and blind duplicate () would
	  lead to crashes. If you don't believe me, please see the failure
	  of the DII test in the daily builds.

	  This started showing up after the optimizations to the critical
	  path outlined in 

	  "Thu Nov  6 22:32:19 2003  Balachandran Natarajan
	  <bala@dre.vanderbilt.edu>" 
	  
	* tao/Synch_Reply_Dispatcher.cpp:

	  Removed a debug statement which was a waste. 
	
	* tao/DynamicInterface/DII_Invocation.cpp:

	  Cosmetic changes.

	* ChangeLog: 

	  Removed a long listing of Makefile whose dependencies were
	  updated. They have served no purpose AFAIK other than blowing up
	  the size of ChangeLogs. Just a regexp indicating that the
	  Makefile's dependencies were updated should be sufficient.

Fri Nov  7 07:06:59 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/Makefile*:
	* tests/Exposed_Policies/Makefile:
	* orbsvcs/tests/Notify/Makefile*:

	  Updated dependencies since the last dependencies left them
	  broken. 

Fri Nov  7 06:50:49 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * */Makefile*:
	
          Updated dependencies.

Thu Nov  6 22:32:19 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	This checkin is about an optimization and definitely not for the
	weak hearted :-)! All this jugglery is for getting rid of one
        allocation along the critical path. Not sure how much would this
	fetch us, but nevertheless an useful optimization. 

	A quick brief. In older versions of TAO, the client thread used to
        create a output CDR on the TSS and use that for marshalling data
        and sending data which was neat. But during the reply, we used to